[gd_scene load_steps=2 format=3 uid="uid://duqplya6f01x2"]

[ext_resource type="Script" path="res://Lobby/Lobby.gd" id="1_00jvb"]

[node name="Lobby" type="CanvasLayer"]
script = ExtResource("1_00jvb")

[node name="vbxLobbyContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -78.0
offset_right = 285.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="hbxNameContainer" type="HBoxContainer" parent="vbxLobbyContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="lblName" type="Label" parent="vbxLobbyContainer/hbxNameContainer"]
layout_mode = 2
text = "Name"

[node name="txtName" type="TextEdit" parent="vbxLobbyContainer/hbxNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Test"

[node name="hbxIPContainer" type="HBoxContainer" parent="vbxLobbyContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="lblIP" type="Label" parent="vbxLobbyContainer/hbxIPContainer"]
layout_mode = 2
text = "IP      "

[node name="txtIP" type="TextEdit" parent="vbxLobbyContainer/hbxIPContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="hbxIPContainer2" type="HBoxContainer" parent="vbxLobbyContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="lblIP" type="Label" parent="vbxLobbyContainer/hbxIPContainer2"]
layout_mode = 2
text = "Color "

[node name="optColors" type="OptionButton" parent="vbxLobbyContainer/hbxIPContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnHost" type="Button" parent="vbxLobbyContainer"]
layout_mode = 2
text = "HOST"

[node name="btnJoin" type="Button" parent="vbxLobbyContainer"]
layout_mode = 2
text = "JOIN"

[node name="hbxStatusContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="lblStateText" type="Label" parent="hbxStatusContainer"]
layout_mode = 2
text = "STATUS: "

[node name="lblStatus" type="Label" parent="hbxStatusContainer"]
layout_mode = 2
text = "Waiting"

[connection signal="item_selected" from="vbxLobbyContainer/hbxIPContainer2/optColors" to="." method="_on_optColors_item_selected"]
[connection signal="pressed" from="vbxLobbyContainer/btnHost" to="." method="_on_btnHost_pressed"]
[connection signal="pressed" from="vbxLobbyContainer/btnJoin" to="." method="_on_btnJoin_pressed"]
